# rust-learn-notes

./: .gitignore  README.md
ip_geolocation_api/: Cargo.toml  README.md
ip_geolocation_api/src/: main.rs
todocli/: .gitignore  Cargo.toml  README.md  roadmap.md
todocli/src/: main.rs  routes.rs
todocli/src/components/: commands.rs  mod.rs  storage.rs  todo.rs  utils.rs
todocli/src/middleware/: mod.rs  request_logger.rs
zero2prod/: Cargo.toml  Dockerfile  README.md  configuretion.yaml
zero2prod/src/: configuration.rs  lib.rs  main.rs  startup.rs
zero2prod/src/routes/: subscriptions.rs
