[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
name = "zero2prod"
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"


[dependencies]
actix-web = "4.5.0"
tokio = { version = "1.39.0", features = ["full"] }
log = "0.4.22"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.104"
config = "0.14"
uuid = "1.6.0"
chrono = "0.4.24"
env_logger = "0.11.5"

 [dependencies.sqlx]
 version = "0.8.2"
 default-features = false
 features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
 ]
